--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -1,8 +1,5 @@
 h2 {
   color: green; }
 
-body {
-  font-family: "Courier New", Courier, monospace; }
-
-h1 {
-  color: red; }
+.card-blogs-item {
+  margin-top: 2rem; }
