--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -1,8 +1,5 @@
 @import "variables";
 
-body {
-  font-family: "Courier New", Courier, monospace;
-}
-h1 {
-  color: red;
+.card-blogs-item {
+  margin-top: 2rem;
 }
