--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -1,1 +1,20 @@
-<h1>HOME</h1>
+<div class="mt-5">
+    <div class="row">
+        {{#each blogs}}
+        <div class="col-sm-6 col-lg-4">
+            <div class="card card-blogs-item">
+                <a href="/courses/{{this.slug}}">
+                    <img class="card-img-top" src="{{this.image}}" alt="{{this.name}}">
+                </a>
+                <div class="card-body">
+                    <a href="/courses/{{this.slug}}"> 
+                        <h3 class="card-title">{{this.name}}</h3>
+                    </a>
+                    <p class="card-text">{{this.description}}</p>
+                    <a href="#" class="btn btn-primary">Buy Course</a>
+                </div>
+            </div>
+        </div>
+         {{/each}}
+    </div>
+</div>
