--- a/src/resources/views/partials/footer.hbs
+++ b/src/resources/views/partials/footer.hbs
@@ -1,1 +1,8 @@
-<h2>footer</h2>
+<footer class="text-muted mt-5">
+  <div class="container">
+    <p class="float-right">
+      <a href="#">Back to top</a>
+    </p>
+    <p>Please subcribe my channel Youtube ❤️</p>
+  </div>
+</footer>
