--- a/src/resources/views/me/stored-course.hbs
+++ b/src/resources/views/me/stored-course.hbs
@@ -18,10 +18,56 @@
             <td>{{this.createdAt}}</td>
             <td class="d-flex">
                 <a href="/courses/{{this._id}}/edit" class="btn btn-link">Update</a>
-                <a href="/courses/{{this._id}}" class="btn btn-link">Delete</a>
+                <a href="" class="btn btn-link" data-id="{{this._id}}" data-toggle="modal" data-target="#deleteCourse">Delete</a>
             </td>
             </tr>
            {{/each}}
         </tbody>
     </table>
 </div>
+
+
+<!-- Modal -->
+<div class="modal fade" id="deleteCourse" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Delete Course</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        Are you sure you want to delete this course? 
+      </div>
+      <div class="modal-footer">
+        <button id="btn-delete-course" type="button" class="btn btn-danger">Delete</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Delete Form -->
+<form method="POST" name="delete-course-form"></form>
+
+<script >
+    document.addEventListener('DOMContentLoaded', function ()  {
+        var courseId;
+        var deleteForm = document.forms["delete-course-form"];
+        var btnDeleteCourse = document.getElementById('btn-delete-course');
+
+        //when dialog confirm click
+        $('#deleteCourse').on('show.bs.modal', function (event) {
+        var button = $(event.relatedTarget) 
+        courseId = button.data('id') 
+        console.log(courseId); //get id
+        })
+        
+        //when button btn delete click
+        btnDeleteCourse.onclick = function(){
+            deleteForm.action = '/courses/' + courseId + '?_method=DELETE';
+            deleteForm.submit();
+        }
+    });
+</script>
