--- a/src/resources/views/partials/footer.hbs
+++ b/src/resources/views/partials/footer.hbs
@@ -1,8 +1,9 @@
-<footer class="text-muted mt-5">
-  <div class="container">
-    <p class="float-right">
-      <a href="#">Back to top</a>
-    </p>
-    <p>Please subcribe my channel Youtube ❤️</p>
-  </div>
-</footer>
+
+  <footer class="my-5 pt-5 text-muted text-center text-small">
+    <p class="mb-1">&copy; 2017-2020 Company Name</p>
+    <ul class="list-inline">
+      <li class="list-inline-item"><a href="/">Home</a></li>
+      <li class="list-inline-item"><a href="/courses/create">Create Course</a></li>
+      <li class="list-inline-item"><a href="/me/stored/course">List Course</a></li>
+    </ul>
+  </footer>
