--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -13,8 +13,7 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="/">Home</a>
             <a class="dropdown-item" href="/courses/create">Create Course</a>
-            <a class="dropdown-item" href="/me/stored/course">My Course</a>
-            <a class="dropdown-item" href="/me/stored/course">My Article</a>
+            <a class="dropdown-item" href="/me/stored/course">List Course</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#">Log Out</a>
           </div>
