--- a/src/resources/views/courses/show.hbs
+++ b/src/resources/views/courses/show.hbs
@@ -1,9 +1,14 @@
 <div class="mt-5">
     <div class="row">
         <div class="col-lg-3">
-            <button class="btn btn-warning">
-                    Start Course </span>
-            </button>
+            <div class="list-course">
+                <h6>Front-end</h6>
+                <ul>
+                    <li>HTML/CSS</li>
+                    <li>Javascripts</li>
+                    <li>ReactJS</li>
+                </ul>
+            </div>
         </div>
         <div class="col-lg-9">
             <h2>{{blog.name}}</h2>
